0.7.0 - currently working on
- [#3457] Fix: The language functions of the BE-user model return the default not the selected language
- [#3245] Feature: Add a model + mapper for BE user groups
- [#3444] Fix: A model cannot have a relation to itself
- [#3443] Fix: getSubpart('foo') fails if there is text after the marker in the template
- [#3442] Fix: Documentation wrong about getPrefixedMarkers
- [#3295] Feature: Add getPageUid to tx_oelib_Model
- [#3430] Feature: Add a function createBackEndUserGroup to the testingFramework
- [#3332] Fix: Unused variable $children in tx_oelib_Visibility_Tree_testcase::test_makeNodesVisibleForGivenNode_MakesThisNodeVisible
- [#3412] Fix: db::retrieveColumnsForTable and ::getTcaForTable need to check for the existence of the table
- [#3411] Feature: Add tx_oelib_templatehelper::ensureIntegerArrayValues
- [#3413] Fix: Some functions in oelib_db are missing the "static" keyword
- [#2311] Feature: Add tx_oelib_db::count
- [#3405] Feature: Add Model_FrontEndUser::getAge
- [#3388] Fix: Autoloader does not load XCLASS
- [#3387] Feature: Add accessors for the date of birth
- [#3370] Fix: Models should be marked as dead on __destruct
- [#3384] Fix: Add XCLASS stuff for the PEAR and emogrifier classes
- [#3360] Feature: Only list aux records from the GRSP in the FE editor
- [#3335] Fix: The e-mail function tests need to take forceCharset into account
- [#3359] Feature: Add a function for reading the current GRSP
- [#3354] Feature: add findByWhereClause to mapper
- [#3356] Feature: The mappers in test mode should ignore all non-dummy records
- [#3272] Feature: Provide a parameter "sorting" to mapper::findAll
- [#3338] Fix: E-Mails still contain CRLF
- [#3281] Fix: Free memory more agressively
- [#3340] Change: Move the creation of the headers and the body out of the loop in abstractMailer::send
- [#3328] Fix: Ghost acquired via getNewGhost must not be loaded
- [#3317] Fix: Check for object comparisons / recursive nesting