@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3471] Fix: Test failure in tx_oelib_configurationCheck_testcase
 - [#3457] Fix: The language functions of the BE-user model return the default not the selected language
 - [#3245] Feature: Add a model + mapper for BE user groups
 - [#3444] Fix: A model cannot have a relation to itself
